@@ -1,0 +1,254 @@
+{
+  "values": [
+    "minecraft:oak_planks",
+    "minecraft:spruce_planks",
+    "minecraft:birch_planks",
+    "minecraft:jungle_planks",
+    "minecraft:acacia_planks",
+    "minecraft:dark_oak_planks",
+    "minecraft:mangrove_planks",
+    "minecraft:oak_sapling",
+    "minecraft:spruce_sapling",
+    "minecraft:birch_sapling",
+    "minecraft:jungle_sapling",
+    "minecraft:acacia_sapling",
+    "minecraft:dark_oak_sapling",
+    "minecraft:mangrove_propagule",
+    "minecraft:oak_log",
+    "minecraft:spruce_log",
+    "minecraft:birch_log",
+    "minecraft:jungle_log",
+    "minecraft:acacia_log",
+    "minecraft:dark_oak_log",
+    "minecraft:mangrove_log",
+    "minecraft:mangrove_roots",
+    "minecraft:stripped_spruce_log",
+    "minecraft:stripped_birch_log",
+    "minecraft:stripped_jungle_log",
+    "minecraft:stripped_acacia_log",
+    "minecraft:stripped_dark_oak_log",
+    "minecraft:stripped_oak_log",
+    "minecraft:stripped_mangrove_log",
+    "minecraft:oak_wood",
+    "minecraft:spruce_wood",
+    "minecraft:birch_wood",
+    "minecraft:jungle_wood",
+    "minecraft:acacia_wood",
+    "minecraft:dark_oak_wood",
+    "minecraft:mangrove_wood",
+    "minecraft:stripped_oak_wood",
+    "minecraft:stripped_spruce_wood",
+    "minecraft:stripped_birch_wood",
+    "minecraft:stripped_jungle_wood",
+    "minecraft:stripped_acacia_wood",
+    "minecraft:stripped_dark_oak_wood",
+    "minecraft:stripped_mangrove_wood",
+    "minecraft:oak_leaves",
+    "minecraft:spruce_leaves",
+    "minecraft:birch_leaves",
+    "minecraft:jungle_leaves",
+    "minecraft:acacia_leaves",
+    "minecraft:dark_oak_leaves",
+    "minecraft:mangrove_leaves",
+    "minecraft:azalea_leaves",
+    "minecraft:flowering_azalea_leaves",
+    "minecraft:note_block",
+    "minecraft:grass",
+    "minecraft:fern",
+    "minecraft:dead_bush",
+    "minecraft:seagrass",
+    "minecraft:tall_seagrass",
+    "minecraft:dandelion",
+    "minecraft:poppy",
+    "minecraft:blue_orchid",
+    "minecraft:allium",
+    "minecraft:azure_bluet",
+    "minecraft:red_tulip",
+    "minecraft:orange_tulip",
+    "minecraft:white_tulip",
+    "minecraft:pink_tulip",
+    "minecraft:oxeye_daisy",
+    "minecraft:cornflower",
+    "minecraft:wither_rose",
+    "minecraft:lily_of_the_valley",
+    "minecraft:brown_mushroom",
+    "minecraft:red_mushroom",
+    "minecraft:bookshelf",
+    "minecraft:oak_stairs",
+    "minecraft:chest",
+    "minecraft:crafting_table",
+    "minecraft:wheat",
+    "minecraft:oak_sign",
+    "minecraft:spruce_sign",
+    "minecraft:birch_sign",
+    "minecraft:acacia_sign",
+    "minecraft:jungle_sign",
+    "minecraft:dark_oak_sign",
+    "minecraft:mangrove_sign",
+    "minecraft:oak_door",
+    "minecraft:oak_wall_sign",
+    "minecraft:spruce_wall_sign",
+    "minecraft:birch_wall_sign",
+    "minecraft:acacia_wall_sign",
+    "minecraft:jungle_wall_sign",
+    "minecraft:dark_oak_wall_sign",
+    "minecraft:mangrove_wall_sign",
+    "minecraft:oak_pressure_plate",
+    "minecraft:spruce_pressure_plate",
+    "minecraft:birch_pressure_plate",
+    "minecraft:jungle_pressure_plate",
+    "minecraft:acacia_pressure_plate",
+    "minecraft:dark_oak_pressure_plate",
+    "minecraft:mangrove_pressure_plate",
+    "minecraft:sugar_cane",
+    "minecraft:jukebox",
+    "minecraft:oak_fence",
+    "minecraft:oak_trapdoor",
+    "minecraft:spruce_trapdoor",
+    "minecraft:birch_trapdoor",
+    "minecraft:jungle_trapdoor",
+    "minecraft:acacia_trapdoor",
+    "minecraft:dark_oak_trapdoor",
+    "minecraft:mangrove_trapdoor",
+    "minecraft:brown_mushroom_block",
+    "minecraft:red_mushroom_block",
+    "minecraft:mushroom_stem",
+    "minecraft:attached_pumpkin_stem",
+    "minecraft:attached_melon_stem",
+    "minecraft:pumpkin_stem",
+    "minecraft:melon_stem",
+    "minecraft:vine",
+    "minecraft:glow_lichen",
+    "minecraft:oak_fence_gate",
+    "minecraft:lily_pad",
+    "minecraft:nether_wart",
+    "minecraft:cocoa",
+    "minecraft:spruce_stairs",
+    "minecraft:birch_stairs",
+    "minecraft:jungle_stairs",
+    "minecraft:carrots",
+    "minecraft:potatoes",
+    "minecraft:trapped_chest",
+    "minecraft:daylight_detector",
+    "minecraft:acacia_stairs",
+    "minecraft:dark_oak_stairs",
+    "minecraft:mangrove_stairs",
+    "minecraft:sunflower",
+    "minecraft:lilac",
+    "minecraft:rose_bush",
+    "minecraft:peony",
+    "minecraft:tall_grass",
+    "minecraft:large_fern",
+    "minecraft:white_banner",
+    "minecraft:orange_banner",
+    "minecraft:magenta_banner",
+    "minecraft:light_blue_banner",
+    "minecraft:yellow_banner",
+    "minecraft:lime_banner",
+    "minecraft:pink_banner",
+    "minecraft:gray_banner",
+    "minecraft:light_gray_banner",
+    "minecraft:cyan_banner",
+    "minecraft:purple_banner",
+    "minecraft:blue_banner",
+    "minecraft:brown_banner",
+    "minecraft:green_banner",
+    "minecraft:red_banner",
+    "minecraft:black_banner",
+    "minecraft:white_wall_banner",
+    "minecraft:orange_wall_banner",
+    "minecraft:magenta_wall_banner",
+    "minecraft:light_blue_wall_banner",
+    "minecraft:yellow_wall_banner",
+    "minecraft:lime_wall_banner",
+    "minecraft:pink_wall_banner",
+    "minecraft:gray_wall_banner",
+    "minecraft:light_gray_wall_banner",
+    "minecraft:cyan_wall_banner",
+    "minecraft:purple_wall_banner",
+    "minecraft:blue_wall_banner",
+    "minecraft:brown_wall_banner",
+    "minecraft:green_wall_banner",
+    "minecraft:red_wall_banner",
+    "minecraft:black_wall_banner",
+    "minecraft:oak_slab",
+    "minecraft:spruce_slab",
+    "minecraft:birch_slab",
+    "minecraft:jungle_slab",
+    "minecraft:acacia_slab",
+    "minecraft:dark_oak_slab",
+    "minecraft:mangrove_slab",
+    "minecraft:spruce_fence_gate",
+    "minecraft:birch_fence_gate",
+    "minecraft:jungle_fence_gate",
+    "minecraft:acacia_fence_gate",
+    "minecraft:dark_oak_fence_gate",
+    "minecraft:mangrove_fence_gate",
+    "minecraft:spruce_fence",
+    "minecraft:birch_fence",
+    "minecraft:jungle_fence",
+    "minecraft:acacia_fence",
+    "minecraft:dark_oak_fence",
+    "minecraft:mangrove_fence",
+    "minecraft:spruce_door",
+    "minecraft:birch_door",
+    "minecraft:jungle_door",
+    "minecraft:acacia_door",
+    "minecraft:dark_oak_door",
+    "minecraft:mangrove_door",
+    "minecraft:chorus_plant",
+    "minecraft:chorus_flower",
+    "minecraft:beetroots",
+    "minecraft:kelp",
+    "minecraft:kelp_plant",
+    "minecraft:tube_coral",
+    "minecraft:brain_coral",
+    "minecraft:bubble_coral",
+    "minecraft:fire_coral",
+    "minecraft:horn_coral",
+    "minecraft:tube_coral_fan",
+    "minecraft:brain_coral_fan",
+    "minecraft:bubble_coral_fan",
+    "minecraft:fire_coral_fan",
+    "minecraft:horn_coral_fan",
+    "minecraft:tube_coral_wall_fan",
+    "minecraft:brain_coral_wall_fan",
+    "minecraft:bubble_coral_wall_fan",
+    "minecraft:fire_coral_wall_fan",
+    "minecraft:horn_coral_wall_fan",
+    "minecraft:sea_pickle",
+    "minecraft:bamboo_sapling",
+    "minecraft:bamboo",
+    "minecraft:loom",
+    "minecraft:barrel",
+    "minecraft:cartography_table",
+    "minecraft:fletching_table",
+    "minecraft:lectern",
+    "minecraft:smithing_table",
+    "minecraft:campfire",
+    "minecraft:soul_campfire",
+    "minecraft:sweet_berry_bush",
+    "minecraft:warped_fungus",
+    "minecraft:warped_roots",
+    "minecraft:nether_sprouts",
+    "minecraft:crimson_fungus",
+    "minecraft:weeping_vines",
+    "minecraft:weeping_vines_plant",
+    "minecraft:twisting_vines",
+    "minecraft:twisting_vines_plant",
+    "minecraft:crimson_roots",
+    "minecraft:composter",
+    "minecraft:bee_nest",
+    "minecraft:beehive",
+    "minecraft:cave_vines",
+    "minecraft:cave_vines_plant",
+    "minecraft:spore_blossom",
+    "minecraft:azalea",
+    "minecraft:flowering_azalea",
+    "minecraft:moss_carpet",
+    "minecraft:big_dripleaf",
+    "minecraft:big_dripleaf_stem",
+    "minecraft:small_dripleaf",
+    "minecraft:hanging_roots"
+  ]
+}
