@@ -1,0 +1,5 @@
+{
+  "values": [
+    "#minecraft:stairs"
+  ]
+}
