@@ -1,3 +1,7 @@
+Upcoming:
+- Dadobug1111 improved worldgen in several (sometimes subtle, sometimes less subtle) ways
+- Three new tags that allow you to customize worldgen: lostcities/easybreakable (blocks that explosions will break more easily), lostcities/foliage (foliage block test), lostcities/rotatable (rotatable blocks, like stairs)
+
 1.18-5.3.9:
 - SandTechnology fixed a bug on space type worlds (void worlds) with a potential crash
 - Henkelmax fixed an issue with sleeping bags
